--- a/hw4/style.scss
+++ b/hw4/style.scss
@@ -45,93 +45,162 @@ body {
         line-height: 19px;
     }
 }
+.breadcrump {
+    height: 148px;
+    background: #f8f3f4;
+    &_content {
+        padding-top: 59px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        &_left {
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 29px;
+            color: $purpcolor;
+        }
+        &_right {
+            font-weight: 300;
+            font-size: 14px;
+            line-height: 17px;
+            color: #636363;
+            span {
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 17px;
+                color: $purpcolor;
+            }
+        }
+    }
+}
+
+.filter {
+    height: 134px;
+    img {
+        padding: 0 10px;
+    }
+    &_content {
+        display: flex;
+        padding-top: 51px;
+        &_left {
+            display: flex;
+            justify-content: space-between;
+            margin-right: 304px;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 17px;
+            color: #000000;
+        }
+        &_center {
+            display: flex;
+            justify-content: space-between;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            color: #6f6e6e;
+        }
+    }
+}
+
+.pagination{
+    height: 188px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &_content{
+        padding: 0 15px;
+        border: 1px solid #EBEBEB;
+        border-radius: 3px;
+        height: 43px;
+        width: 253px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        a {
+            text-decoration: none;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: #C4C4C4;
+        }
+        a:hover {
+            color: #EF5B70;
+        }
+    }
+
+}
 
 .centering {
     max-width: 1140px;
     margin: 0 auto;
 }
 
-.brand {
-    display: flex;
-    background-color: #f1e4e6;
-    height: 764px;
+.breadcrump {
+    height: 148px;
+    background: #f8f3f4;
 
-    &_left {
-        display: block;
-        width: 50%;
-        position: relative;
-        img {
-            position: absolute;
-            right: 0px;
-            height: 100%;
-        }
-    }
-    &_right_block {
-        border-left: 12px solid $purpcolor;
-        text-transform: uppercase;
-        font-weight: bold;
-        margin-top: 290px;
-        margin-left: 63px;
-        padding-left: 16px;
-        div:nth-child(1) {
-            font-weight: 900;
-            font-size: 48px;
-            line-height: 58px;
-        }
-        div:nth-child(2) {
-            font-weight: bold;
-            font-size: 32px;
-            line-height: 38px;
-        }
-        span {
-            color: $purpcolor;
-        }
-    }
-}
-
-.offer {
-    margin-top: 65px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 260px 180px;
-    grid-gap: 30px;
-    & > div {
-        position: relative;
-    }
-    &_accesories {
-        grid-column: 1/-1;
-    }
-
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-
-    &_text {
+    &_content {
+        padding-top: 59px;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        text-transform: uppercase;
-        text-align: center;
-        font-size: 16px;
-        line-height: 19px;
-        color: #ffffff;
-        span {
-            color: $purpcolor;
-            font-weight: bold;
+
+        &_left {
+            font-weight: 400;
             font-size: 24px;
             line-height: 29px;
+            color: $purpcolor;
+        }
+
+        &_right {
+            font-weight: 300;
+            font-size: 14px;
+            line-height: 17px;
+            color: #636363;
+
+            span {
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 17px;
+                color: $purpcolor;
+            }
         }
     }
 }
+
+.filter {
+    height: 134px;
+
+    img {
+        padding: 0 10px;
+    }
+
+    &_content {
+        display: flex;
+        padding-top: 51px;
+
+        &_left {
+            display: flex;
+            justify-content: space-between;
+            margin-right: 304px;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 17px;
+            color: #000000;
+        }
+
+        &_center {
+            display: flex;
+            justify-content: space-between;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            color: #6f6e6e;
+        }
+    }
+}
+
+
 
 .products {
     &_header {
@@ -249,44 +318,36 @@ body {
     }
 }
 
-.feature {
-    padding-top: 103px;
-    padding-bottom: 104px;
-    background-color: #222224;
-    .feature_content {
+.pagination {
+    height: 188px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &_content {
+        padding: 0 15px;
+        border: 1px solid #EBEBEB;
+        border-radius: 3px;
+        height: 43px;
+        width: 253px;
         display: flex;
         justify-content: space-between;
-        .content_block {
-            width: 316px;
-            font-family: "Lato";
-            font-style: normal;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            .feature_picture {
-                margin-bottom: 28px;
-            }
-            .feature_text_header {
-                margin-bottom: 16px;
-                font-size: 19.96px;
-                font-weight: 400;
-                line-height: 24px;
-                color: #fbfbfb;
-            }
-            .feature_text {
-                font-family: "Lato";
-                font-style: normal;
-                font-weight: 300;
-                font-size: 13.972px;
-                line-height: 17px;
-                text-align: center;
-                color: #fbfbfb;
-            }
+        align-items: center;
+
+        a {
+            text-decoration: none;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: #C4C4C4;
+        }
+
+        a:hover {
+            color: #EF5B70;
         }
     }
-}
 
+}
 .footer {
     height: 448px;
     background-image: url(img/footer_back.jpg);
@@ -400,116 +461,33 @@ body {
     }
 }
 
-.breadcrump {
-    height: 148px;
-    background: #f8f3f4;
-    &_content {
-        padding-top: 59px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        &_left {
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 29px;
-            color: $purpcolor;
-        }
-        &_right {
-            font-weight: 300;
-            font-size: 14px;
-            line-height: 17px;
-            color: #636363;
-            span {
-                font-weight: 700;
-                font-size: 14px;
-                line-height: 17px;
-                color: $purpcolor;
-            }
-        }
-    }
-}
 
-.filter {
-    height: 134px;
-    img {
-        padding: 0 10px;
-    }
-    &_content {
-        display: flex;
-        padding-top: 51px;
-        &_left {
-            display: flex;
-            justify-content: space-between;
-            margin-right: 304px;
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 17px;
-            color: #000000;
-        }
-        &_center {
-            display: flex;
-            justify-content: space-between;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 17px;
-            color: #6f6e6e;
-        }
-    }
-}
-
-.pagination{
-    height: 188px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    &_content{
-        padding: 0 15px;
-        border: 1px solid #EBEBEB;
-        border-radius: 3px;
-        height: 43px;
-        width: 253px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        a {
-            text-decoration: none;
-            font-weight: 300;
-            font-size: 16px;
-            line-height: 19px;
-            color: #C4C4C4;
-        }
-        a:hover {
-            color: #EF5B70;
-        }
-    }
-
-}
 
 @media (max-width: 1139px) {
     .centering {
         max-width: 735px;
     }
-    .brand {
-        height: 368px;
-        &_right_block {
-            margin-top: 139px;
-            margin-left: 39px;
-            div:nth-child(1) {
-                font-size: 44px;
-                line-height: 53px;
-            }
-            div:nth-child(2) {
-                font-size: 24px;
-                line-height: 29px;
-            }
-        }
-    }
-    .offer {
-        margin-top: 20px;
-        padding: 0 16px;
-        grid-template-rows: 167px 116px;
-        grid-gap: 20px;
-    }
+    // .brand {
+    //     height: 368px;
+    //     &_right_block {
+    //         margin-top: 139px;
+    //         margin-left: 39px;
+    //         div:nth-child(1) {
+    //             font-size: 44px;
+    //             line-height: 53px;
+    //         }
+    //         div:nth-child(2) {
+    //             font-size: 24px;
+    //             line-height: 29px;
+    //         }
+    //     }
+    // }
+    // .offer {
+    //     margin-top: 20px;
+    //     padding: 0 16px;
+    //     grid-template-rows: 167px 116px;
+    //     grid-gap: 20px;
+    // }
     .products {
         padding: 0 16px;
         &_cards {
@@ -517,16 +495,16 @@ body {
             grid-gap: 17px;
         }
     }
-    .feature {
-        padding: 0 0 64px;
-        .feature_content {
-            flex-direction: column;
-            align-items: center;
-            .content_block {
-                margin-top: 48px;
-            }
-        }
-    }
+    // .feature {
+    //     padding: 0 0 64px;
+    //     .feature_content {
+    //         flex-direction: column;
+    //         align-items: center;
+    //         .content_block {
+    //             margin-top: 48px;
+    //         }
+    //     }
+    // }
     .footer {
         height: 615px;
         &_block {
@@ -558,38 +536,36 @@ body {
             }
         }
     }
-    .brand {
-        &_left {
-            display: none;
-        }
-        &_right {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            &_block {
-                margin: 0;
-                div:nth-child(1) {
-                    font-size: 38px;
-                    line-height: 46px;
-                }
-                div:nth-child(2) {
-                    font-size: 20px;
-                    line-height: 24px;
-                }
+    .breadcrump {
+        &_content {
+            flex-direction: column;
+    
+            &_left {
+                padding-bottom: 32px;
             }
         }
-    }
-    .offer {
-        padding: 0 16px;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: 247px 247px 247px 247px;
-        grid-gap: 32px;
     }
     .products {
         padding: 0 8px;
         &_cards {
             grid-template-columns: repeat(1, 1fr);
+        }
+    }
+    
+    
+    .filter {
+        height: 81px;
+    
+        &_content {
+            padding-top: 24px;
+    
+            &_left {
+                margin-right: 61px;
+    
+                p {
+                    display: none;
+                }
+            }
         }
     }
     .copyright {
@@ -605,24 +581,5 @@ body {
             }
         }
     }
-    .breadcrump{
-        &_content{
-            flex-direction: column;
-            &_left{
-                padding-bottom: 32px;
-            }
-        }
-    }
-    .filter{
-        height: 81px;
-        &_content{
-            padding-top: 24px;
-            &_left{
-                margin-right: 61px;
-                p{
-                    display: none;
-                }
-            }
-        }
-    }
+    
 }
